<resources>
    <string name="app_name">MoviePeek</string>
    <string name="action_settings">Settings</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="overview">Overview</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="trailers_label">Trailers</string>
    <string name="reviews_label">Reviews</string>
    <string name="list_empty_message">Nothing here yet.</string>
    <string name="trailers_list_empty_message">No trailers yet.</string>
    <string name="reviews_list_empty_message">No reviews yet.</string>
    <string name="share_buton_text">Share</string>
    <string name="sort_criteria_menu">Sort Criteria</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="favourites">Favourites</string>
    <string name="offline_message">"Oops. You are not connected.    :("</string>
    <string name="no_browser_message">Please install a web browser or Youtube app and retry.</string>
</resources>
