<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_criteria_menu"
        app:showAsAction="ifRoom">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/pop"
                    android:title="@string/most_popular" />
                <item
                    android:id="@+id/rat"
                    android:title="@string/highest_rated" />
                <item
                    android:id="@+id/fav"
                    android:title="@string/favourites" />
            </group>
        </menu>
    </item>

</menu>