<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:id="@+id/child_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="@dimen/content_margin">

            <include layout="@layout/movie_card" />

            <TextView
                android:id="@+id/overview_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/overview"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/trailers_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/trailers_label"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailers_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/trailer_layout" />

            <TextView
                android:id="@+id/reviews_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/reviews_label"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/noReviews_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="@string/reviews_list_empty_message"
                android:visibility="gone" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviews_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/review_layout" />

        </LinearLayout>

    </ScrollView>

</android.support.v4.widget.NestedScrollView>