<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/card_padding">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:src="@drawable/loading" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginBottom="32dp"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dp"
                android:text="@string/release_date"
                android:textIsSelectable="false" />

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <CheckBox
                android:id="@+id/fav_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginTop="24dp"
                android:button="@drawable/fav_icon"
                android:buttonTint="@color/colorAccent" />

        </GridLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>